--- a/src/app/language/he.json
+++ b/src/app/language/he.json
@@ -1,61 +1,50 @@
 {
-  "quit": "יציאה",
-  "cancel": "ביטול",
-  "beforeQuit": "לצאת? בטוח/ה?",
-  "loading": "נא להמתין...",
-  "loadingVideo": "טוען סרט, נא להמתין",
-  "searchLoading": "מחפש...",
-  "noResults": "לא נמצאו תוצאות לחיפוש.",
-  "search": "חיפוש",
-  "movies": "סרטים",
-  "subtitledIn": "כתוביות",
-  "quality": "איכות",
-  "watchItNow": "צפייה",
-  "durationUnit": "דקות",
-  "connecting": "מתחבר...",
-  "startingDownload": "מתחיל בהורדה...",
-  "downloading": "מוריד...",
-  "UpgradeVersion": "עדכון Popcorn Time",
-  "UpgradeVersionDescription": "Popcorn Time %s שוחררה. כדאי לעדכן עכשיו!",
-  "legalDisclaimer": "Popcorn Time מורידה וזורעת סרטים בשימוש טורנטים, מה שעלול להיות לא חוקי במדינתך.",
-  "legalDisclaimerResponsible": "איננו אחראים לכל בעיה שעלולה להווצר, נא לוודא שהבנת את תנאי השימוש בתוכנה לפני השימוש.",
-  "legalDisclaimerAccept": "הבנתי",
-  "legalDisclaimerCancel": "יציאה",
-  "genres": {
-    "all": "פופולרי",
-    "action": "פעולה",
-    "adventure": "הרפתקאות",
-    "animation": "הנפשה",
-    "biography": "ביוגרפיה",
-    "comedy": "קומדיה",
-    "crime": "פשע",
-    "documentary": "תיעודי",
-    "drama": "דרמה",
-    "family": "משפחה",
-    "fantasy": "פנטזיה",
-    "film-noir": "סרט אפל",
-    "history": "היסטוריה",
-    "horror": "אימה",
-    "music": "מוזיקה",
-    "musical": "מוזיקלי",
-    "mystery": "מסתורין",
-    "romance": "רומנטיקה",
-    "sci-fi": "מדע בדיוני",
-    "short": "סרט קצר",
-    "sport": "ספורט",
-    "thriller": "מותחן",
-    "war": "מלחמה",
-    "western": "מערבון"
-  },
-  "french": "צרפתית",
-  "english": "אנגלית",
-  "spanish": "ספרדית",
-  "swedish": "שוודית",
-  "portuguese": "פורטוגזית",
-  "romanian": "רומנית",
-  "turkish": "טורקית",
-  "dutch": "הולנדית",
-  "italian": "איטלקית",
-  "hebrew": "עברית",
-  "arabic": "ערבית"
+  	"quit": "יציאה",
+  	"cancel": "ביטול",
+  	"beforeQuit": "לצאת? הם את/ה בטוח/ה?",
+  	"loading": "נא להמתין...",
+  	"loadingVideo": "טוען סרט, נא להמתין",
+  	"searchLoading": "מחפש...",
+  	"noResults": "לא נמצאו תוצאות לחיפוש.",
+  	"search": "חיפוש",
+  	"movies": "סרטים",
+  	"subtitledIn": "כתוביות",
+  	"quality": "איכות",
+  	"watchItNow": "צפייה",
+  	"durationUnit": "דקות",
+  	"connecting": "מתחבר...",
+  	"startingDownload": "מתחיל בהורדה...",
+  	"downloading": "מוריד...",
+  	"UpgradeVersion": "עדכון Popcorn Time",
+  	"UpgradeVersionDescription": "Popcorn Time %s שוחררה. כדאי לעדכן עכשיו!",
+  	"legalDisclaimer": "Popcorn Time מורידה וזורעת סרטים בשימוש טורנטים, מה שעלול להיות לא חוקי במדינתך.",
+  	"legalDisclaimerResponsible": "איננו אחראים לכל בעיה שעלולה להווצר, נא לוודא שקיבלת את תנאי השימוש בתוכנה לפני השימוש.",
+  	"legalDisclaimerAccept": "קיבלתי",
+  	"legalDisclaimerCancel": "יציאה",
+	"genre-all": "פופלרי",
+	"genre-action": "פעולה",
+	"genre-adventure": "הרפתקאות",
+	"genre-animation": "הנפשה",
+	"genre-biography": "ביוגרפיה",
+	"genre-comedy": "קומדיה",
+	"genre-crime": "פשע",
+	"genre-documentary": "תיעודי",
+	"genre-drama": "דרמה",
+	"genre-family": "משפחה",
+	"genre-fantasy": "דמיוני",
+	"genre-film-noir": "סרט אפל",
+	"genre-history": "היסטוריה",
+	"genre-horror": "אימה",
+	"genre-music": "מוזיקה",
+	"genre-musical": "מחזמר",
+	"genre-mystery": "מסתורין",
+	"genre-romance": "רומנטיקה",
+	"genre-sci-fi": "מדע בדיוני",
+	"genre-short": "סרט קצר",
+	"genre-sport": "ספורט",
+	"genre-thriller": "מותחן",
+	"genre-war": "מלחמה",
+	"genre-western": "מערבון",
+	"genre-film": "ז'אנר סרט"
 }
+
